--- a/midterm odd/index.html
+++ b/midterm odd/index.html
@@ -1,11 +1,39 @@
+<!-- Emir Pekova 8955893 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Midterm Odd </title>
+    <link rel= "stylesheet" href="css/main.css">
+    <link rel= "stylesheet" href="css/normalize.css">
 </head>
 <body>
-    
+    <header>
+        <h1> Pictures Of Cute Dogs </h1>
+            <main>
+                <img id="alone" src="images/dog1.jpg"
+                alt="cute dog"
+                height="200"
+                style="background-color: tomato;">
+                <img id="group" src="images/dog-group.webp"
+                alt="cute group of dogs"
+                height="200"
+                style="background-color: tomato;">>
+            </main>
+        <h2> More Information <br> 
+            <ul>
+               <a href="https://en.wikipedia.org/wiki/Dog" target="_blank"> <li> wikipedia </li> </a>
+               <a href="https://www.youtube.com/watch?v=ZipzqCphi8s&ab_channel=AsapSCIENCE" target="_blank"><li> video </li> </a>
+            </ul> 
+        </h2>
+    </header>
+    <class>
+        <footer>
+        <p1>
+            &copy Emir Pekova 2023
+        </p1>
+        </footer>
+    </class>
 </body>
 </html>
